tests/cases/errors/process_kind_unsupported/main.sv
module Top;
  final begin end
endmodule
